<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_publisher_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ojedamorala@hotmail.com">pepe</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ament_imgui</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
